# fx-gltf

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: fx-gltfConfig.cmake.in
examples/viewer/: .clang-format  Engine.h  EngineOptions.h  ImageData.h  Logger.h  MaterialData.h  MeshData.h  README.md  ShaderOptions.h  StepTimer.h  StringFormatter.h  stdafx.cpp  stdafx.h  viewer.cpp  viewer.sln  viewer.vcxproj  viewer.vcxproj.filters
examples/viewer/Assets/: ground_plane.gltf
examples/viewer/DirectX/: D3DConstants.h  D3DDeviceResources.cpp  D3DDeviceResources.h  D3DEngine.cpp  D3DEngine.h  D3DEnvironmentIBL.cpp  D3DEnvironmentIBL.h  D3DFrameResources.cpp  D3DFrameResources.h  D3DGraph.h  D3DMesh.cpp  D3DMesh.h  D3DMeshInstance.h  D3DOrbitCamera.cpp  D3DOrbitCamera.h  D3DRenderContext.h  D3DTexture.cpp  D3DTexture.h  D3DTextureSet.cpp  D3DTextureSet.h  D3DUploadBuffer.h  D3DUtil.h  d3dx12.h
examples/viewer/DirectX/Shaders/: Common.hlsli  Default.hlsl  LambertPS.hlsl  PBRPS.hlsl  SimpleLighting.hlsli  Sky.hlsl
examples/viewer/Platform/: COMUtil.h  Mouse.cpp  Mouse.h  platform.h
include/fx/: gltf.h
test/: .clang-format  CMakeLists.txt  CMakeSettings.json
test/src/: unit-base64.cpp  unit-exceptions.cpp  unit-roundtrip.cpp  unit-saveload.cpp  unit.cpp  utility.cpp  utility.h
